--- a/views/admin/page/products/create.pug
+++ b/views/admin/page/products/create.pug
@@ -3,6 +3,8 @@ include ../../mixins/alert.pug
 
 block main
   +alert-error(3000)
+  +alert-success(3000)
+
   
   h1(class="mb-4") Thêm mới sản phẩm
 
