--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -4,4 +4,6 @@
       li
         a(href=`/${prefixAdmin}/dashboard`) Tổng quan
       li
+        a(href=`/${prefixAdmin}/category`) Danh mục sản phẩm
+      li
         a(href=`/${prefixAdmin}/products`) Sản phẩm
