danh so san pham

--- a/views/admin/page/products/index.pug
+++ b/views/admin/page/products/index.pug
@@ -65,7 +65,7 @@ block main
                             name="id"
                             value=item.id
                             )
-                        td #{index +1}
+                        td #{pagination.limitItems*(pagination.currentPage - 1) + (index+1)}
                         td 
                             img(
                                 src=item.thumbnail
