--- a/views/client/Layout/default.pug
+++ b/views/client/Layout/default.pug
@@ -19,7 +19,9 @@ html
         script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous")  
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous") 
         script(src="/socket.io/socket.io.js")
+        
+        //- icon
         script(type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js") 
         script(src="/js/script.js")
         script(src="/js/socket.js")
-        script(src="/js/chat.js")
+        script(type="module" src="/js/chat.js")
