--- a/views/client/Layout/default.pug
+++ b/views/client/Layout/default.pug
@@ -7,6 +7,8 @@ html
         link(rel="stylesheet", href="/css/style.css")
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer")
     
+        //- file-upload-with-preview
+        link(rel="stylesheet", href="https://unpkg.com/file-upload-with-preview/dist/style.css")
     
     body 
         include ../partials/header.pug
@@ -20,8 +22,12 @@ html
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous") 
         script(src="/socket.io/socket.io.js")
         
-        //- icon
-        script(type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js") 
         script(src="/js/script.js")
         script(src="/js/socket.js")
         script(type="module" src="/js/chat.js")
+
+        //- icon
+        script(type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js") 
+        
+        //- file-upload-with-preview
+        script(src="https://unpkg.com/file-upload-with-preview/dist/file-upload-with-preview.iife.js") 
