--- a/views/client/Layout/default.pug
+++ b/views/client/Layout/default.pug
@@ -9,7 +9,9 @@ html
     
         //- file-upload-with-preview
         link(rel="stylesheet", href="https://unpkg.com/file-upload-with-preview/dist/style.css")
-    
+
+        //- viewer
+        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.6/viewer.css")
     body 
         include ../partials/header.pug
 
@@ -24,10 +26,15 @@ html
         
         script(src="/js/script.js")
         script(src="/js/socket.js")
-        script(type="module" src="/js/chat.js")
 
         //- icon
         script(type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js") 
         
         //- file-upload-with-preview
         script(src="https://unpkg.com/file-upload-with-preview/dist/file-upload-with-preview.iife.js") 
+
+        //- viewerjs
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.6/viewer.js") 
+        
+        //- chat.js
+        script(type="module" src="/js/chat.js")
